fixed menu scrollbar

--- a/src/components/FAQS/FAQS.css
+++ b/src/components/FAQS/FAQS.css
@@ -28,3 +28,31 @@
   text-decoration: underline;
   color: #0066cc;
 }
+
+.faqs-text-list {
+  padding: 1rem;
+  width: 100%;
+  height: 90%;
+}
+
+.faqs-list {
+  list-style: none; /* Remove default bullets */
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  height: 100%;
+  font-size: 0.8rem !important;
+}
+
+.faqs-list li {
+  padding: 0.5rem;
+}
+
+.faqs-list li::before {
+  content: "\2022"; /* Add content: \2022 is the CSS Code/unicode for a bullet */
+  color: #eac061; /* Change the color */
+  font-weight: bold; /* If you want it to be bold */
+  display: inline-block; /* Needed to add space between the bullet and the text */
+  width: 1em; /* Also needed for space (tweak if needed) */
+  margin-left: -1em; /* Also needed for space (tweak if needed) */
+}
